[package]
name = "rusty-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Dishank Chauhan"]
description = "A secure sandbox for executing untrusted code"

[features]
default = []
linux = ["nix", "seccompiler"]
wasm = ["wasmtime", "wasmtime-wasi", "wasi-common", "wat", "cap-std"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
regex = "1.8"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
tempfile = "3.5"
async-trait = "0.1"
dirs = "5.0"

# Linux-specific dependencies
nix = { version = "0.26", optional = true }
seccompiler = { version = "0.3", optional = true }
libc = { version = "0.2", features = ["extra_traits"] }

# WASM support
wasmtime = { version = "12.0.1", optional = true }
wasmtime-wasi = { version = "12.0.1", optional = true }
wasi-common = { version = "12.0.1", optional = true }
wat = { version = "1.0", optional = true }
cap-std = { version = "2.0", optional = true }
