[package]
name = "rusty-sandbox"
version = "0.3.0"
edition = "2021"
authors = ["Dishank Chauhan"]
description = "A secure sandbox for executing untrusted code"

[features]
default = []
linux = ["dep:procfs", "seccompiler", "libseccomp"]
wasm = ["wasmtime", "wasmtime-wasi", "wasi-common", "wat", "cap-std", "wasmparser"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
regex = "1.8"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.18", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11", features = ["metrics", "trace"] }
log = "0.4"
tempfile = "3.5"
async-trait = "0.1"
dirs = "5.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.15"
scopeguard = "1.2"
sysinfo = "0.28"
crossterm = "0.26"
tui = "0.19"
nix = "0.26"
procfs = { version = "0.15", optional = true }

# Linux-specific dependencies
seccompiler = { version = "0.3", optional = true }
libseccomp = { version = "0.3", optional = true }
libc = { version = "0.2", features = ["extra_traits"] }

# WASM support
wasmtime = { version = "12.0.1", optional = true }
wasmtime-wasi = { version = "12.0.1", optional = true }
wasi-common = { version = "12.0.1", optional = true }
wat = { version = "1.0", optional = true }
cap-std = { version = "2.0", optional = true }
wasmparser = { version = "0.100", optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
